tests/snaps/repl/holes.repl.vi

let io: IO = <IO>;
> if false { 1 } else { _ }
0

let io: IO = <IO>;
> (_, _) = (1, 2)

let io: IO = <IO>;
> _[N32]
0

let io: IO = <IO>;
> _[(Bool,)].0 = false

let io: IO = <IO>;
> let x: &N32 = &_

let io: IO = <IO>;
let x: &N32 = &(0);
> /clear x

let io: IO = <IO>;
> #[impl(Default, Show)] struct* Chain[T](T, Option[Chain[T]])

let io: IO = <IO>;
> let x = _[Chain[()]]

let io: IO = <IO>;
let x: Chain[()] = Chain((), None());
> let y: Chain[()] = _

let io: IO = <IO>;
let x: Chain[()] = Chain((), None());
let y: Chain[()] = Chain((), None());
> /clear x y

let io: IO = <IO>;
> #[impl(Default)] enum TrafficLight { Red(), Green(), Blue() } // error
error: cannot find impl of trait `Default[TrafficLight]`
   @ input:1:8
 1 | #[impl(Default)] enum TrafficLight { Red(), Green(), Blue() } // error


let io: IO = <IO>;
> 1 + _ // error
error: search limit reached when finding impl of trait `Add[N32, ?121, ?122]`
   @ input:1:1
 1 | 1 + _ // error


let io: IO = <IO>;
> (_[N32], _[N32]) = (1, 2) // error

let io: IO = <IO>;
> "abc" ++ _[N32] // error
error: cannot find impl of trait `Concat[String, N32, ?134]`
   @ input:1:1
 1 | "abc" ++ _[N32] // error


let io: IO = <IO>;
> _ // error
error: search limit reached when finding impl of trait `Default[?131]`
   @ input:1:1
 1 | _ // error

error: search limit reached when finding impl of trait `Drop[?131]`
   @ input:1:1
 1 | _ // error


let io: IO = <IO>;
